custom.css
@page {
	/* size: 74mm 105mm; */
	size: 105mm 74mm;
	/* size: A7; */
	margin: 3mm;
	padding: 0mm;
	/* border: 1px solid black; */
}

html {
	font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
	font-size: 10pt;
	line-height: 1;
}


body {
	height: 64mm;
	width: 95mm;

	padding: 0mm;
	margin: 0mm;
	
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

h1 {
	text-align: right;
	position: absolute;
	top: 0;
}

h1, h2 {
	font-family: 'Nimbus Mono PS', 'Courier New', monospace;
	font-weight: 500;
}

img {
	max-width: 100%;
}

img, h1, h2, p {
	padding-left: 0mm;
	padding-right: 0mm;
	margin-left: 0mm;
	margin-right: 0mm;
}

.push-to-top {
	position: absolute;
	top: 0;
}

.push-to-bottom {
	position: absolute;
	bottom: 0;
}

